--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "nodemon": "^3.0.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.54.0"
   }
 }
